--- a/funciones_auxiliares/graficarVectores.ipynb
+++ b/funciones_auxiliares/graficarVectores.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graficarVectores(vecs,cols,alpha=1):\n",
+    "def graficarVectores(vecs, cols, alpha=1):\n",
     "    plt.axvline(x=0, color=\"grey\", zorder=0)\n",
     "    plt.axhline(y=0, color=\"grey\", zorder=0)\n",
     "\n",
     "    for i in range(len(vecs)):\n",
-    "        x = np.concatenate([[0,0],vecs[i]])\n",
+    "        x=np.concatenate([[0,0],vecs[i]])\n",
     "        plt.quiver([x[0]],\n",
     "                    [x[1]],\n",
     "                    [x[2]],\n",
     "                    [x[3]],\n",
-    "                    angles =\"xy\", scale_units =\"xy\",\n",
+    "                    angles=\"xy\", scale_units=\"xy\",\n",
     "                    scale=1,\n",
     "                    color=cols[i],\n",
     "                    alpha=alpha)"
@@ -25,18 +25,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "5dfae695991f40f7f711b859ebe4404a578ce2940a1c2f7058c1cb98bd497b2c"
    }
   }
  },
